[package]
name = "localization_core"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", default-features = false, features=["libm"]}
heapless = "0.8.0"
num-traits = { version = "0.2.19", default-features = false }
simba = { version = "0.9.0", default-features = false }
rand = { version = "0.8.5", default-features = false }

[dev-dependencies]
approx = "0.5.1"
rand = "0.8.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "twr_benchmark"
harness = false

[[bench]]
name = "tdoa_benchmark"
harness = false
