[package]
name = "locate-rs"
authors = ["Silvano Cortesi <silvano.cortesi@hotmail.com>"]
version = "1.0.2"
edition = "2024"
license = "LGPL-3.0"
description = "A `no_std` Rust library for 3D localization using TDOA and Trilateration. It provides fast iterative solvers (Levenberg-Marquardt) and a slower closed-form, eigenvector-based solution (trilateration only) for high-accuracy positioning."
repository = "https://github.com/trembel/locate-rs"
keywords = ["localization", "locate", "3d", "trilateration", "tdoa"]
categories = ["embedded", "no-std::no-alloc", "science", "algorithms"]
readme = "README.md"

[dependencies]
nalgebra = { version = "0.33.2", default-features = false, features=["libm"]}
heapless = "0.8.0"
num-traits = { version = "0.2.19", default-features = false }
simba = { version = "0.9.0", default-features = false }
rand = { version = "0.9.2", default-features = false }

[dev-dependencies]
approx = "0.5.1"
rand = "0.9.2"
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "twr_benchmark"
harness = false

[[bench]]
name = "tdoa_benchmark"
harness = false
